<resources>
    <string name="app_name">ShoppingAppDemo</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="enter_user_name">Enter Your Name</string>
    <string name="enter_user_email">Enter Your Email</string>
    <string name="enter_user_password">Enter Your Password</string>
    <string name="enter_OTP">Enter One Time Password</string>
    <string name="verify">Verify Your Phone Number!</string>
    <string name="freshLive">Fresh Live</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="moreOption">----More Register Option ----</string>
    <string name="enter_email">Enter Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="register_form">Register Form</string>
    <string name="string_phoneNumber">Enter Your Phone Number</string>
    <string name="phone_registration">Phone Registration</string>
    <string name="send_code">Send One Time Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_form">Login Form</string>
    <string name="login">Login</string>
    <string name="more_login_option">More Login Option</string>
    <string name="have_account">Already have account? Let\'s go login</string>
    <string name="not_account">Haven\'t account yet? Let\'s register now!</string>
    <string name="enter_otp_code">Enter One Time Password</string>
    <string name="verify_code">Verify Your Phone Number</string>
    <string name="code">+code</string>
    <string name="category">Category</string>
    <string name="name">Name</string>
    <string name="enter_meal_name">Search by meal</string>
    <string name="price">Price</string>
    <string name="offer_title">Don\'t Forget Your Offer!</string>
    <string name="start_your_order">Start Your Order Now!!</string>
    <string name="description">Description</string>
    <string name="details">Details</string>
    <string name="timeRange">Time Range</string>
    <string name="CategoryListFragment">Fragment For Category List</string>
    <string name="AreaItemFragment">Fragment For Area List</string>
    <string name="IngredientFragment">Fragment For Ingredients List</string>
    <string name="address">Address</string>
    <string name="rating">4.5</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="enter_area_name">Search by area</string>
    <string name="enter_ingredient_name">Search by ingredient</string>
    <string name="meal_fragment_title">This is Meal List Fragment</string>
    <string name="area">Area</string>
    <string name="link">Link</string>
    <string name="label_verify">Verify your Otp</string>
    <string name="label_resend_otp">Resend OTP</string>
    <string name="add_To_Cart">Add to Cart</string>
    <string name="Amount">Amount</string>
    <string name="zero">0</string>
    <string name="meal_name">Meal Name</string>
    <string name="confirm">Confirm</string>
    <string name="pickup">Pickup</string>
    <string name="delivery">Delivery</string>
    <string name="dineIn">Dine-In</string>
    <string name="total">Total</string>
    <string name="placeOrder">Place Order</string>
    <string name="logout">Logout</string>
    <string name="order_page">Order Page</string>
    <string name="cart_details">Cart Page</string>
    <string name="home_page">Home page</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="user_phone">User Phone</string>
    <string name="sendOTP">Send One Time Password</string>
    <string name="add">Add</string>
    <string name="select_address">Select Address</string>
    <string name="add_new_address">Add New Address</string>
    <string name="next">Next</string>
    <string name="title">Title</string>
    <string name="add_address">Please Add Your Address</string>
    <string name="address_title">Enter Address Title</string>
    <string name="enter_address">Enter Address</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="total_bill_amount">Total Amount</string>
    <string name="amount">Amount</string>
    <string name="meal_quantity">Quantity</string>
    <string name="total_price">Total</string>
    <string name="price_value">Price</string>
    <string name="product_quantity_value">Quantity</string>
    <string name="select_payment">Select Payment</string>
    <string name="radio_payment_1">Cash On Delivery</string>
    <string name="radio_payment_2">PayPal</string>
    <string name="radio_payment_3">Debit or Credit Card</string>
    <string name="radio_payment_4">Gift Card</string>
    <string name="cart_meal">Order Summary</string>
    <string name="pick_up_option">Pick Up</string>
    <string name="payment_title">Payment Title</string>
    <string name="payment_info">Payment Info</string>
    <string name="confirm_place">Confirm</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="one">1</string>
    <string name="enter_new_address">Enter New Address</string>
    <string name="enter_new_title">Enter New Title</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="enter_phone_number">Enter Your Phone Number</string>
    <string name="email">Email</string>
    <string name="number">Number</string>
    <string name="your_order">Your Order</string>
    <string name="mobile">Mobile</string>
    <string name="campus">Campus</string>
    <string name="college">College</string>
    <string name="label_update">Update</string>
    <string name="order_list">Order List</string>
    <string name="order_id">Order Id</string>
    <string name="order_date">Date</string>
    <string name="order_details">Order Details</string>
    <string name="order_status">Order Status</string>
    <string name="welcome">Welcome!</string>
    <string name="file_location_permission">File location permission request</string>
    <string name="ok">Ok</string>
    <string name="permisson_apporved">Permission Approved</string>
    <string name="permisson_denied">Permission Denied</string>
    <string name="settings">Settings</string>
    <string name="delivery_status">Delivery Location</string>
    <string name="guestLogin">Login in as Guest</string>
    <string name="approve">Account Required</string>
    <string name="message_approve">Please Login Account First</string>
    <string name="approved">Change to Login Page</string>
    <string name="Crash">Crash</string>
    <string name="submit">Submit</string>
    <string name="title_activity_about_me">AboutMeActivity</string>
    <string name="contact_us">Contact Us</string>
    <string name="info_title">We will like to hear any feedback from you!</string>
    <string name="info_email">xkx372752892@gmail.com</string>
    <string name="info_phone">+1-214-883-9090</string>
    <string name="call_us">Call Us</string>
    <string name="email_us">Email Us</string>
    <string name="info_support">Chat With Our Agent</string>
    <string name="chat_wiht_us">Support Chat</string>
    <string name="sender_message">Sender Message</string>
    <string name="receiver_message">Receiver Message</string>
    <string name="type_message">Type in Your Meessage</string>
    <string name="send">Send</string>
    <string name="your_total">Your total amount is</string>
    <string name="please_scan">Please scan QR Code to finish payment</string>
    <string name="fresh_live">Fresh Live Maker</string>
    <string name="favorite_name">Favorite Name</string>
    <string name="pay">Pay</string>
    <string name="enter_card_number">Enter Your Card Number</string>
    <string name="month_years">MM/YY</string>
    <string name="enter_card_cvv">CVV</string>
    <string name="order_address_title">Delivery Title</string>
    <string name="track_order">Track Order</string>
    <string name="num">2</string>
    <string name="multiple">X</string>
    <string name="items">Items</string>
</resources>