<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_meal_name"
        android:text="@string/meal_name"
        style="@style/TextMealName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_unit_Price"
        android:text="@string/price"
        style="@style/TextMealPrice"
        app:layout_constraintTop_toBottomOf="@id/txt_meal_name"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_Quantity"
        android:text="@string/meal_quantity"
        style="@style/TextMealDesc"
        app:layout_constraintTop_toBottomOf="@id/txt_unit_Price"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_unit_Price_value"
        android:text="@string/price_value"
        style="@style/TextMealPrice"
        app:layout_constraintTop_toBottomOf="@id/txt_meal_name"
        app:layout_constraintStart_toEndOf="@id/txt_Quantity"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_Quantity_value"
        android:text="@string/product_quantity_value"
        android:gravity="center"
        style="@style/TextMealDesc"
        app:layout_constraintTop_toBottomOf="@id/txt_unit_Price"
        app:layout_constraintStart_toEndOf="@id/txt_Quantity"/>


</androidx.constraintlayout.widget.ConstraintLayout>