<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_summary_total_bill_amount"
        android:text="@string/total_bill_amount"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TextMealNameLarge"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_order_details_bill_amount_value"
        android:text="@string/amount"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TextMealName"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_order_details_pick_up_option"
        android:text="@string/pick_up_option"
        android:scrollbarSize="@dimen/_25sp"
        style="@style/TextMealDesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_summary_total_bill_amount"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/txt_order_details_pick_up_option"
        android:id="@+id/layout_address">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_order_details_address_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_order_details_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_order_details_address_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_order_details_payment_title"
        android:text="@string/payment_title"
        android:textSize="@dimen/_20sp"
        style="@style/TextMealCategory"
        android:layout_marginStart="@dimen/_10dp"
        app:layout_constraintTop_toBottomOf="@id/layout_address"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_order_details_payment_info"
        android:text="@string/payment_info"
        style="@style/TextMealPrice"
        android:layout_marginStart="@dimen/_10dp"
        app:layout_constraintTop_toBottomOf="@id/layout_address"
        app:layout_constraintStart_toEndOf="@id/txt_order_details_payment_title"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_Order_status"
        android:text="@string/order_status"
        android:textSize="@dimen/_20sp"
        style="@style/TextMealCategory"
        android:layout_marginStart="@dimen/_10dp"
        app:layout_constraintTop_toBottomOf="@id/txt_order_details_payment_title"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_Order_status_value"
        android:text="@string/order_status"
        style="@style/TextMealPrice"
        android:layout_marginStart="@dimen/_10dp"
        app:layout_constraintTop_toBottomOf="@id/txt_order_details_payment_info"
        app:layout_constraintStart_toEndOf="@id/txt_order_details_payment_title"/>
</androidx.constraintlayout.widget.ConstraintLayout>