<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.checkout.checkout.CheckoutSummaryFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/recyclerView_summary_cart"
        tools:itemCount="2"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_view_purchase_meal"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_summary_total_bill_amount"
        android:text="@string/total_bill_amount"
        app:layout_constraintTop_toBottomOf="@id/recyclerView_summary_cart"
        style="@style/TextMealNameLarge"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_summary_total_bill_amount_value"
        android:text="@string/amount"
        app:layout_constraintTop_toBottomOf="@id/recyclerView_summary_cart"
        style="@style/TextMealName"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_pick_up_option"
        android:text="@string/pick_up_option"
        android:layout_marginTop="@dimen/_10dp"
        android:scrollbarSize="@dimen/_25sp"
        style="@style/TextMealName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_summary_total_bill_amount"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/txt_pick_up_option"
        android:id="@+id/layout_address">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_summary_address_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_summary_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_summary_address_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_payment_title"
        android:text="@string/payment_title"
        android:textSize="@dimen/_20sp"
        android:layout_margin="@dimen/_10dp"
        style="@style/TextMealCategory"
        android:layout_marginStart="@dimen/_10dp"
        app:layout_constraintTop_toBottomOf="@id/layout_address"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_payment_info"
        android:text="@string/payment_info"
        style="@style/TextMealPrice"
        android:layout_margin="@dimen/_10dp"
        android:layout_marginStart="@dimen/_10dp"
        app:layout_constraintTop_toBottomOf="@id/layout_address"
        app:layout_constraintStart_toEndOf="@id/txt_payment_title"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_summary_confirm_place"
        android:text="@string/confirm_place"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/_20dp"
        android:background="@drawable/btn_background"
        android:textSize="@dimen/_20sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>