<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightYellow2"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.checkout.checkout.CheckoutDeliveryFragment">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/group_delivery_type"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_pickUp"
            android:text="@string/pickup"
            style="@style/TextMealDesc"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_delivery"
            android:text="@string/delivery"
            style="@style/TextMealDesc" />
    </RadioGroup>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:id="@+id/frameLayout_delivery_option"
        app:layout_constraintTop_toBottomOf="@id/group_delivery_type"
        app:layout_constraintBottom_toTopOf="@id/btnDeliveryNext"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAddAddress"
        android:text="@string/add"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_margin="@dimen/_10dp"
        android:background="@drawable/btn_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnDeliveryNext"
        android:text="@string/next"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_margin="@dimen/_10dp"
        android:background="@drawable/btn_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>