<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/mealQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_20sp"
        tools:text = "@string/num"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_20dp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_multiple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiple"
        android:textSize="@dimen/_20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/mealQuantity"
        android:layout_marginStart="@dimen/_10dp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_order_meal_name"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:text="@string/meal_name"
        android:textSize="@dimen/_20sp"
        android:ellipsize="end"
        android:layout_marginStart="@dimen/_20dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/txt_multiple"
        />


</androidx.constraintlayout.widget.ConstraintLayout>