<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.checkout.checkout.CheckoutCartMealFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_total_amount"
        android:text="@string/total_bill_amount"
        android:textSize="@dimen/_30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_total_amount_value"
        android:text="@string/amount"
        style="@style/TextMealNameLarge"
        android:textSize="@dimen/_30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/recyclerView_checkout_meal"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:id="@+id/recyclerView_checkout_meal"
        app:layout_constraintTop_toBottomOf="@id/txt_total_amount"
        app:layout_constraintBottom_toTopOf="@id/btnNext"
        tools:listitem="@layout/item_view_purchase_meal"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnNext"
        android:text="@string/next"
        android:textColor="@color/white"
        android:background="@drawable/btn_background"
        android:layout_margin="@dimen/_10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerView_checkout_meal"/>

</androidx.constraintlayout.widget.ConstraintLayout>